# sfml-pang

./: .clang-format  CMakeLists.txt  README.md  SConscript  SConstruct  background.cpp  background.h  ball.cpp  ball.h  main.cpp  player.cpp  player.h  shot.cpp  shot.h
.github/workflows/: main.yml
data/: CMakeLists.txt
game/: CMakeLists.txt  game.cpp  game.h
gfx/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: ball.h  player.h  shot.h
lib/src/: ball.cpp  player.cpp
src/: background.cpp  background.h  ball.cpp  ball.h  game.cpp  game.h  main.cpp  player.cpp  player.h  shot.cpp  shot.h  sound_manager.cpp  sound_manager.h  status_panel.cpp  status_panel.h
